--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hugeicons/react": "^1.1.5",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@supabase/supabase-js": "^2.95.3",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
